# open-hypergraphs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: array.rs  finite_function.rs  functor.rs  hypergraph.rs  indexed_coproduct.rs  lib.rs  macros.rs  open_hypergraph.rs  optic.rs
